src/unimem/examples/optimization_log_with_unimem.txt
2026-01-08 11:01:48,475 - unimem.core - INFO - Initializing UniMem adapters...
2026-01-08 11:01:48,475 - unimem.adapters.operation_adapter - INFO - Operation adapter initialized (using Hindsight principles, LLM: openai/gpt-4o-mini)
2026-01-08 11:01:48,475 - unimem.adapters.base - INFO - OperationAdapter initialized successfully
2026-01-08 11:01:48,475 - unimem.adapters.layered_storage_adapter - INFO - Layered storage adapter initialized (using CogMem principles, FoA max: 100 tokens, 10 memories)
2026-01-08 11:01:48,475 - unimem.adapters.base - INFO - LayeredStorageAdapter initialized successfully
2026-01-08 11:01:48,475 - unimem.adapters.memory_type_adapter - INFO - Memory type adapter initialized (using MemMachine + Hindsight principles)
2026-01-08 11:01:48,475 - unimem.adapters.base - INFO - MemoryTypeAdapter initialized successfully
2026-01-08 11:01:48,477 - unimem.adapters.graph_adapter - WARNING - LightRAG API not available at http://localhost:9621: HTTPConnectionPool(host='localhost', port=9621): Max retries exceeded with url: /health (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7faf5266c490>: Failed to establish a new connection: [Errno 111] Connection refused'))
2026-01-08 11:01:48,477 - unimem.adapters.base - INFO - GraphAdapter initialized successfully
2026-01-08 11:01:48,566 - httpx - INFO - HTTP Request: GET http://localhost:6333/collections/unimem_memories "HTTP/1.1 404 Not Found"
2026-01-08 11:01:48,568 - httpx - INFO - HTTP Request: PUT http://localhost:6333/collections/unimem_memories "HTTP/1.1 500 Internal Server Error"
2026-01-08 11:01:48,569 - unimem.adapters.atom_link_adapter - WARNING - Failed to connect to Qdrant: Unexpected Response: 500 (Internal Server Error)
Raw response content:
b'{"status":{"error":"Service internal error: Can\'t create directory for collection unimem_memories. Error: failed to create directory `./storage/collections/unimem_memories`: No such file or directo ...'. Vector operations will be limited.
2026-01-08 11:01:48,570 - unimem.adapters.atom_link_adapter - INFO - Loading embedding model from local path: /root/data/AI/pretrain/all-MiniLM-L6-v2
2026-01-08 11:01:48,623 - sentence_transformers.SentenceTransformer - INFO - Use pytorch device_name: cuda:0
2026-01-08 11:01:48,623 - sentence_transformers.SentenceTransformer - INFO - Load pretrained SentenceTransformer: /root/data/AI/pretrain/all-MiniLM-L6-v2
2026-01-08 11:01:48,899 - unimem.adapters.atom_link_adapter - INFO - Embedding model loaded successfully (dimension: 384)
2026-01-08 11:01:48,899 - unimem.adapters.atom_link_adapter - INFO - Atom link adapter initialized (using A-Mem principles)
2026-01-08 11:01:48,899 - unimem.adapters.base - INFO - AtomLinkAdapter initialized successfully
2026-01-08 11:01:48,899 - unimem.adapters.retrieval_adapter - INFO - Retrieval adapter initialized (using multi-architecture principles)
2026-01-08 11:01:48,899 - unimem.adapters.base - INFO - RetrievalAdapter initialized successfully
2026-01-08 11:01:48,899 - unimem.adapters.update_adapter - INFO - Update adapter initialized (using LightMem + A-Mem principles)
2026-01-08 11:01:48,899 - unimem.adapters.base - INFO - UpdateAdapter initialized successfully
2026-01-08 11:01:48,899 - unimem.core - INFO - Adapters available: Operation, LayeredStorage, MemoryType, Graph, AtomLink, Retrieval, Update
2026-01-08 11:01:48,899 - unimem.core - INFO - Initializing UniMem core components...
2026-01-08 11:01:48,899 - unimem.storage.storage_manager - INFO - StorageManager initialized
2026-01-08 11:01:48,899 - unimem.retrieval.retrieval_engine - INFO - RetrievalEngine initialized (max_workers=5)
2026-01-08 11:01:48,899 - unimem.update.ripple_effect - INFO - RippleEffectUpdater initialized (max_depth=3, decay_factor=0.5)
2026-01-08 11:01:48,900 - unimem.update.update_manager - INFO - UpdateManager initialized
2026-01-08 11:01:48,900 - unimem.core - INFO - UniMem initialized successfully
2026-01-08 11:01:48,900 - __main__ - INFO - [Memory Operation] INIT: {'status': 'UniMem enabled'}
2026-01-08 11:01:48,900 - unimem.examples.generate_video_script - INFO - Parsing Word document: video_script_filled_example.docx

======================================================================
模拟用户反馈优化剧本流程
======================================================================

1. 读取初始剧本: generated_script.json
   - 段数: 7
   - 总时长: 60秒
   - 开头: 以预算疑问开场，直接切入年轻人换机痛点...

2. 解析原始文档: video_script_filled_example.docx
Traceback (most recent call last):
  File "/root/data/AI/creator/src/unimem/examples/test_optimization_with_feedback.py", line 329, in <module>
    simulate_user_feedback_optimization()
  File "/root/data/AI/creator/src/unimem/examples/test_optimization_with_feedback.py", line 129, in simulate_user_feedback_optimization
    doc_data = generator.parse_word_document(doc_file)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/data/AI/creator/src/unimem/examples/generate_video_script.py", line 147, in parse_word_document
    result = self.adapter.parse_word_document(doc_path)
             ^^^^^^^^^^^^
AttributeError: 'VideoScriptGenerator' object has no attribute 'adapter'
